Bug 1548198 - Remove 1px of padding in the urlbar input so that text in the popup is aligned with text in the input. r=dao
In quantumbar, favicons have 8px of margin-end:

https://searchfox.org/mozilla-central/rev/197210b8c139b64f642edaa3336d26b9c1761568/browser/themes/shared/urlbar-autocomplete.inc.css#9
https://searchfox.org/mozilla-central/rev/197210b8c139b64f642edaa3336d26b9c1761568/browser/themes/shared/urlbar-autocomplete.inc.css#100

But in awesomebar, it's 9px, e.g.: https://searchfox.org/mozilla-central/rev/197210b8c139b64f642edaa3336d26b9c1761568/toolkit/themes/osx/global/autocomplete.css#46

It's nice that quantumbar has the same amount of space between the type icon and favicon as it does between the favicon and title, unlike awesomebar.  i.e., there's a single margin-end value for both .urlbarView-type-icon and .urlbarView-favicon (urlbarViewIconMarginEnd, 8px).  So instead of adding another 9px value for .urlbarView-favicon's margin-end, this patch removes the 1px of padding in the urlbar input.  That has the added benefit that the space around the identity box and its search icon (shown when typing) is now more symmetrical, although there's still 1px more space on its right side than its left side.

This patch also adjusts spacing in the awesomebar popup so the alignment remains right there.

Differential Revision: https://phabricator.services.mozilla.com/D30413

UltraBlame original commit: c8ada1038c844c5c218b592ea26a09d8f0d4cb83

--- a/browser/themes/shared/urlbar-searchbar.inc.css
+++ b/browser/themes/shared/urlbar-searchbar.inc.css
@@ -948,6 +948,48 @@ visibility
 hidden
 ;
 }
+.
+urlbar
+-
+input
+{
+/
+*
+Remove
+the
+1px
+padding
+-
+left
+(
+and
+padding
+-
+right
+)
+so
+that
+the
+titles
+in
+the
+urlbar
+popup
+align
+with
+the
+text
+in
+the
+input
+.
+*
+/
+padding
+:
+0
+;
+}
 #
 urlbar
 -
